WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111909
List cache partitions as units instead of as their contents
https://bugs.webkit.org/show_bug.cgi?id=111909
Summary
List cache partitions as units instead of as their contents
Vicki Pfau
Reported
2013-03-08 18:16:01 PST
When representing cache partitions to the user, all of the cache items in a partition should be listed as a unit instead of having separate origins per each cache item inside the partitions.
Attachments
Patch
(4.66 KB, patch)
2013-03-08 18:21 PST
,
Vicki Pfau
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vicki Pfau
Comment 1
2013-03-08 18:21:17 PST
Created
attachment 192319
[details]
Patch
Maciej Stachowiak
Comment 2
2013-03-11 14:59:18 PDT
Comment on
attachment 192319
[details]
Patch r=me
Vicki Pfau
Comment 3
2013-03-11 15:38:47 PDT
<
rdar://problem/10393533
>
Vicki Pfau
Comment 4
2013-03-11 15:41:31 PDT
Committed
r145419
: <
http://trac.webkit.org/changeset/145419
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug